Minor correction in Background.

--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,7 @@
 
 \level{Introduction}
 \sublevel{Background}
-  ARINC 429 \cite{arinc2004arinc429} is a prominent standard for wired intra-vehicle communication in civil aviation since its release in 1977. Most active and retired airplanes contain ARINC buses \cite{fuchs2012evolution}, connecting the many digital systems that are necessary for the operation of an aircraft: sensors, radars, engines, cockpit controls and more.
+  ARINC 429 \cite{arinc2004arinc429} is a prominent standard for wired intra-vehicle communication in civil aviation released in 1977. Most active and retired airplanes contain ARINC buses \cite{fuchs2012evolution}, connecting the many digital systems that are necessary for the operation of an aircraft: sensors, radars, engines, cockpit controls and more.
   
   Safety and reliability are key objectives in avionics \cite{fuchs2012evolution}. 
   %Therefore, the main requirements of airborne subsystems are high determinism and low response times \cite{thanthry2005aviation}. ARINC 429 was designed accordingly. 
