Clarify benefits of HW fingerprinting approach.

--- a/main.tex
+++ b/main.tex
@@ -400,8 +400,8 @@
   % [NGM]
   %During these pre-flight operations the changes to the bus can be detected, even if the transmitter LRU is sending normal data.
   During the pre-flight operations changes to the bus can be detected, even if the transmitter LRU is sending normal data.
+  This makes it possible to handle the attack before takeoff, as opposed to mid-flight.
 
-\vspace*{-2ex} %[AW]   
 \sublevel{IDS Overview} \label{Overview}
 \vspace*{-1ex} %[AW]   
   We will next describe our proposed method of anomaly detection. We divide the algorithm into several stages. This section provides an overview of these steps. In the subsequent sections selected stages are explained in greater detail as needed.
